--- a/themes/hugo-creative-portfolio-theme/static/css/style.red.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.red.css
@@ -8,6 +8,118 @@ Startup Template By Bootstrapious.com
 ========================================= */
 /* variant 4 - red */
 /*
+/*    
+=====================   
+ELEPHANT IMPORT   
+=====================   
+*/    
+#blog-listing-medium .post {    
+  margin-bottom: 60px;    
+}   
+#blog-listing-medium .post h2 {   
+  text-transform: uppercase;    
+  margin: 0 0 10px;   
+  font-size: 24px;    
+  letter-spacing: 0.08em;   
+}   
+#blog-listing-medium .post h2 a {   
+  color: #555555;   
+}   
+#blog-listing-medium .post h2 a:hover {   
+  color: #e01557;   
+}   
+#blog-listing-medium .post .author-category {   
+  float: left;    
+  color: #999999;   
+  text-transform: uppercase;    
+  font-weight: 300;   
+  font-size: 12px;    
+  letter-spacing: 0.08em;   
+}   
+#blog-listing-medium .post .author-category a {   
+  font-weight: 500;   
+}   
+#blog-listing-medium .post .date-comments {   
+  float: right;   
+  font-size: 12px;    
+}   
+#blog-listing-medium .post .date-comments a {   
+  color: #999999;   
+  margin-right: 20px;   
+}   
+#blog-listing-medium .post .date-comments a:hover {   
+  color: #e01557;   
+}   
+@media (min-width: 768px) {   
+  #blog-listing-medium .post .date-comments {   
+    text-align: right;    
+  }   
+}   
+#blog-listing-medium .post .intro {   
+  text-align: left;   
+}   
+#blog-listing-medium .post .clearfix:before,    
+#blog-listing-medium .post .clearfix:after,   
+#blog-listing-medium .post .navbar:before,    
+#blog-listing-medium .post .navbar:after,   
+#blog-listing-medium .post .navbar-header:before,   
+#blog-listing-medium .post .navbar-header:after {   
+  content: " ";   
+  display: table;   
+}   
+#blog-listing-medium .post .clearfix:after,   
+#blog-listing-medium .post .navbar:after,   
+#blog-listing-medium .post .navbar-header:after {   
+  clear: both;    
+}   
+#blog-listing-medium .post .clearfix:before,    
+#blog-listing-medium .post .clearfix:after,   
+#blog-listing-medium .post .navbar:before,    
+#blog-listing-medium .post .navbar:after,   
+#blog-listing-medium .post .navbar-header:before,   
+#blog-listing-medium .post .navbar-header:after {   
+  content: " ";   
+  display: table;   
+}   
+#blog-listing-medium .post .clearfix:after,   
+#blog-listing-medium .post .navbar:after,   
+#blog-listing-medium .post .navbar-header:after {   
+  clear: both;    
+}   
+#blog-listing-medium .post .image {   
+  margin-bottom: 10px;    
+  overflow: hidden;   
+}   
+#blog-listing-medium .post .image img {   
+  -webkit-transition: all 0.2s ease-out;    
+  -moz-transition: all 0.2s ease-out;   
+  transition: all 0.2s ease-out;    
+}   
+@media (max-width: 767px) {   
+  #blog-listing-medium .post .image img.img-responsive {    
+    min-width: 100%;    
+  }   
+}   
+#blog-listing-medium .post .video {   
+  margin-bottom: 10px;    
+}   
+#blog-listing-medium .post .read-more {   
+  text-align: right;    
+}   
+ /*   
+=====================   
+FIXED POSITION - ADDED BY PARKER    
+=====================   
+*/    
+@media (min-width:768px) {    
+  .col-sb-fixedpos {    
+    position: fixed;    
+  }   
+  .col-main-fixedpos {    
+    float: right;   
+  }   
+}   
+/*
 
 =====================
 GENERAL
@@ -332,7 +444,7 @@ SIDEBAR + RIGHT COLUMN
   }
 }
 .sidebar-heading {
-  font-size: 22px;
+  font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
